@startuml PlatformUM

'''Diagrama de clases de ticket bus online'''

class Passenger {
    - name: string
    - lastName: string
    - email: string
    - hasProfile: boolean
    + getName(): String
    + getLastName(): String
    + getEmail(): String
    + hasProfile(): boolean
    + bookTickets(quantity: int): void
}

class Trip {
    - origin: City
    - destination: City
    - departureDateTime: Date
    - duration: int
    - bus: Bus
    + getOrigin(): City
    + getDestination(): City
    + getDepartureDateTime(): Date
    + getDuration(): int
    + getBus(): Bus
    + assingBus(): void
}

class City {
    - name: String
    + getName(): String
}

class Ticket {
    - id: int
    - trip: Trip
    - dateTime: Date
    - price: double
    + getId(): int
    + getTrip(): Trip
    + getDateTime(): Date
    + getPrice(): double
    + generateTicket(): void

}

class Bus {
    - plateNumber: string
    - capacity: int
    - model: string
    - company: Company
    + getPlateNumber(): String
    + getCapacity(): int
    + getModel(): String
    + getCompany(): Company
    + checkAvailability(): boolean
}

class Company {
    - name: string
    - address: string
    - phone: String
    + getName(): String
    + getAddress(): String
    + getPhone(): String

}

class Booking {
    - ticket: Ticket
    - passengers: List<Passenger>
    - bookingStatus: String
    + getTicket(): Ticket
    + getPassengers(): List<Passenger>
    + getBookingStatus(): String
    + confirmBooking(): void
    + cancelBooking(): void
}

Ticket --> City : origin
Ticket --> City : destination

Passenger "1" *-- "n" Ticket : books

Bus --> Company : company

Trip --> City : origin
Trip --> City : destination
Trip --> Bus : bus

Booking --> Ticket : ticket
Booking --> Passenger : passengers

@enduml
